turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:12: error: not found: value getColorSol
if (getColorSol()==Color.BLACK) {
    ^LangtonsAnt:13: error: not found: value WHITE
	setCouleur(WHITE)
                   ^LangtonsAnt:18: error: not found: value BLACK
	setCouleur(BLACK)
                   ^